--- a/package.json
+++ b/package.json
@@ -13,15 +13,21 @@
     "bcryptjs": "2.4.3",
     "cookie-parser": "^1.4.3",
     "dotenv": "6.0.0",
+    "got": "^9.4.0",
     "graphql": "^0.13.2",
     "graphql-cli": "^2.16.7",
     "graphql-yoga": "1.16.2",
     "jsonwebtoken": "8.3.0",
+    "next": "^7.0.2",
     "nodemailer": "^4.6.8",
     "nodemon": "1.18.4",
     "npm-run-all": "^4.1.3",
     "prisma": "1.17.1",
     "prisma-binding": "2.1.6",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.2",
     "stripe": "^6.12.1"
   },
   "license": "MIT",
